--- a/app/src/main/res/layout/activity_image_detect.xml
+++ b/app/src/main/res/layout/activity_image_detect.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/image"
@@ -29,8 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:textSize="25sp"
-        android:text="NO image selected"
         android:gravity="center"
+
+        android:text="NO image selected"
         android:textColor="#d60060"
         android:id="@+id/displayobjname">
     </TextView>
@@ -48,7 +55,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:gravity="center"
         android:textColor="#d60060"
@@ -70,14 +77,23 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:gravity="center"
         android:textColor="#d60060"
         android:text="NO image selected"
-        android:textSize="25sp"
+        android:textSize="15sp"
         android:id="@+id/displaytextfromimage">
     </TextView>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:textColor="@android:color/black"
+        android:gravity="center"
+        android:text="NO COPYRIGHT A GOOGLE API"
+        android:textSize="10sp"
+        >
+    </TextView>
 
 </LinearLayout>
+</ScrollView>
